# cellular-sp500

./: README.md  data.py  grid.py  lstm.py  market_caps.json  pyproject.toml  simulator.py  sp500_grid.csv  train.py  train_utils.py  weights.py
data/: A.parquet  AAL.parquet  AAP.parquet  AAPL.parquet  ABBV.parquet  ABC.parquet  ABT.parquet  ACGL.parquet  ACN.parquet  ADBE.parquet  ADI.parquet  ADM.parquet  ADP.parquet  ADSK.parquet  AEE.parquet  AEP.parquet  AES.parquet  AFL.parquet  AIG.parquet  AIZ.parquet  AJG.parquet  AKAM.parquet  ALB.parquet  ALGN.parquet  ALK.parquet  ALL.parquet  ALLE.parquet  AMAT.parquet  AMCR.parquet  AMD.parquet  AME.parquet  AMGN.parquet  AMP.parquet  AMT.parquet  AMZN.parquet  ANET.parquet  ANSS.parquet  AON.parquet  AOS.parquet  APA.parquet  (+464 more)
models/: model_A_A-ADBE.pt  model_A_A-ADSK.pt  model_A_A-ALL.pt  model_A_A-CAT.pt  model_A_A-ECL.pt  model_A_A-ES.pt  model_A_A-FAST.pt  model_A_A-HAL.pt  model_A_A-HPQ.pt  model_A_A-ICE.pt  model_A_A-KLAC.pt  model_A_A-ROK.pt  model_A_A-TXN.pt  model_A_AAL-ALLE.pt  model_A_AAL-BKNG.pt  model_A_AAL-BXP.pt  model_A_AAL-CAG.pt  model_A_AAL-CBOE.pt  model_A_AAL-CDAY.pt  model_A_AAL-CDW.pt  model_A_AAL-CMG.pt  model_A_AAL-CTAS.pt  model_A_AAL-HII.pt  model_A_AAL-OGN.pt  model_A_AAL-VTRS.pt  model_A_AAL-WRK.pt  model_A_AAP-ACGL.pt  model_A_AAP-ADI.pt  model_A_AAP-ADM.pt  model_A_AAP-BBWI.pt  model_A_AAP-COP.pt  model_A_AAP-MPC.pt  model_A_AAP-RL.pt  model_A_AAP-SBUX.pt  model_A_AAP-TGT.pt  model_A_AAP-TJX.pt  model_A_AAP-XOM.pt  model_A_AAPL-ABBV.pt  model_A_AAPL-ADBE.pt  model_A_AAPL-AES.pt  (+14800 more)
(+16400 files in other folders)
