[tool.poetry]
name = "cellular-sp500"
version = "0.1.0"
description = "S&P 500 Simulator with Cellular Automata"
authors = ["Punit Arani <punitsai36@gmail.com>"]
readme = "README.md"
packages = [{include = "cellular_sp500"}]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
jupyter = "^1.0.0"
lxml = "^4.9.2"
matplotlib = "^3.7.1"
networkx = "^3.1"
pandas = "^2.0.0"
pandas-datareader = "^0.10.0"
plotly = "^5.14.1"
pyarrow = "^11.0.0"
scipy = "^1.10.1"
scikit-learn = "^0.24.2"
tabulate = "^0.9.0"
tqdm = "^4.65.0"
torch = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
